# THESIS

./: .gitignore  CMakeLists.txt  concurrent_load_balancer.cpp  cpp_results.csv  erl_results.csv  measure_linux.py  prime_calculation.cpp  prime_calculation.erl
src/distributed/ping_pong_lb_caf/server/: CMakeLists.txt  Dockerfile  old_ping_pong_lb_server.cpp  ping_pong_lb_server.cpp  server-deployment.yaml
src/distributed/ping_pong_lb_prime_caf/load_balancer/: CMakeLists.txt  Dockerfile  load-balancer-deployment.yaml  ping_pong_lb_prime_load_balancer.cpp
src/native/ping_pong_caf/: CMakeLists.txt  ping_pong.cpp  ping_pong_caf_results.csv  ping_pong_caf_results_raw.csv
src/native/ping_pong_caf/measurements/: ping_pong____2025-03-17-20-41-36.json  ping_pong____2025-03-17-20-41-55.json  ping_pong____2025-03-17-20-42-12.json  ping_pong____2025-03-17-20-42-29.json  ping_pong____2025-03-17-20-42-47.json  ping_pong____2025-03-17-20-43-04.json  ping_pong____2025-03-17-20-43-22.json  ping_pong____2025-03-17-20-43-39.json  ping_pong____2025-03-17-20-43-56.json  ping_pong____2025-03-17-20-44-14.json  ping_pong____2025-03-17-20-44-31.json  ping_pong____2025-03-17-20-44-56.json  ping_pong____2025-03-17-20-45-20.json  ping_pong____2025-03-17-20-45-45.json  ping_pong____2025-03-17-20-46-09.json  ping_pong____2025-03-17-20-46-33.json  ping_pong____2025-03-17-20-46-58.json  ping_pong____2025-03-17-20-47-22.json  ping_pong____2025-03-17-20-47-47.json  ping_pong____2025-03-17-20-48-11.json  ping_pong____2025-03-17-20-48-36.json  ping_pong____2025-03-17-20-49-01.json  ping_pong____2025-03-17-20-49-25.json  ping_pong____2025-03-17-20-49-49.json  ping_pong____2025-03-17-20-50-14.json  ping_pong____2025-03-17-20-50-38.json  ping_pong____2025-03-17-20-51-03.json  (+429 more)
src/native/prime_calculation_caf/: CMakeLists.txt  prime_calculation.cpp  prime_calculation_caf_results.csv  prime_calculation_caf_results_raw.csv
(+2089 files in other folders)
